--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
+    "@tailwindcss/vite": "^4.2.0",
     "lucide-react": "^0.563.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.13.0",
+    "tailwindcss": "^4.2.0",
+    "zundo": "^2.3.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@types/node": "^25.2.3",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.2.1",
